samples/_failures_safe/1761415118_20cac8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_401d5b62.c: In function ‘main’:
./samples/SAFE/__tmp_401d5b62.c:196:9: error: expected declaration or statement at end of input
  196 |         State new_state = handle_event(sm, event, data, data_len);
      |         ^~~~~
./samples/SAFE/__tmp_401d5b62.c:196:9: error: expected declaration or statement at end of input
